# rust-dahl-randompartition

./: Cargo.toml  clippy  dahl-randompartition.h  generate-header
src/: clust.rs  cost.rs  cpp.rs  crp.rs  distr.rs  epa.rs  ffi.rs  fixed.rs  frp.rs  jlp.rs  lib.rs  lsp.rs  mcmc.rs  nggp.rs  old2sp.rs  old3sp.rs  oldsp.rs  oldsp2.rs  perm.rs  prelude.rs  prior.rs  shrink.rs  slice.rs  sp.rs  sp2.rs  sp_mixture.rs  testing.rs  trp.rs  up.rs  urp.rs  wgt.rs
