[package]
name = "dahl-randompartition"
version = "0.1.0"
authors = ["David B. Dahl <dahl@stat.byu.edu>"]
edition = "2021"
description = "An efficient representation of a set partition."
homepage = "https://dahl.byu.edu"
license = "MIT OR Apache-2.0"

[dependencies]
rand = "0.8.3"
rand_pcg = "0.3.0"
rand_distr = "0.4.2"
statrs = "0.15.0"

dahl-bellnumber = { git="https://github.com/dbdahl/rust-dahl-bellnumber.git", rev="b521e67" }
# dahl-bellnumber = { path="/home/dahl/docs/devel/rust-dahl-bellnumber" }

# dahl-salso = "0.6.6"
dahl-salso = { git="https://github.com/dbdahl/rust-dahl-salso.git", rev="b438a37" }
# dahl-salso = { path="/home/dahl/docs/devel/rust-dahl-salso" }
